fixed all responsiveness issues with media queries in CSS. Also changed the boostrap container to fluid to fix alignment issues on larger displays.

--- a/main.css
+++ b/main.css
@@ -125,7 +125,20 @@ button{
 } 
 
 @media screen and (min-width: 576px){
-    
+    .image{
+        width: 85vw;
+        padding-left: 15vw;
+    }
+
+    .carousel-control-prev-icon{
+        position: relative;
+        left: 10vw;
+    }
+
+    .carousel-control-next-icon{
+        position: relative;
+        right: 10vw;
+    }
 }
 /* =================== */
 /* === footer area === */
